♻ refactor: update GSAP animation to avoid layout shift

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,6 +26,11 @@
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
+.initial-card {
+  transform: translateY(50px);
+  opacity: 0;
+}
+
 @utility neo-border {
   @apply border-[3px] border-black;
 }
